--- a/Challenge 2/style.css
+++ b/Challenge 2/style.css
@@ -1,24 +1,51 @@
+body {
+    background-color: #262626;
+    font-size: 20px;
+}
 .lecture_grid {
-display: grid;
-grid-template-columns: 1fr 3fr;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: black;
+    color: white;
+}
+.lecture_box2{
+    margin: 20px;
+    padding-left: 20px;
+    padding-top: 80px;
+    position: relative;
+}
+.circle {
+    border-radius: 50%;
+    width: 100%;
+    height: 360px;
 }
 img {
-    width: 330px;
+    width: 100%;
+    height: 550px;
 }
+
 .nav_Sec {
-width: 100%;
-height: 40px;
-background-color: Black;
+    width: 100%;
+    height: 60px;
+    position: fixed; 
+    bottom: 0;
 }
 li {
     display: inline-block;
     padding-right: 250px;
+    padding-left: 50px;
     color: white;
     padding-top: 12px;
+    height: 35px;
+    background-color: black;
+    border: solid 1px #aaa;
+  
 }
 .photo_Gal_Grid {
     margin: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 6em;
+    grid-gap: 5em;
 }
